0.2.0/_sources/index.rst.txt
Welcome to Olive's documentation!
=================================

.. important::
   Olive is currently under **pre-release**. There will be constant updates and improvements to the functions and usage.
   Feel free to give feedback and suggestions to us.

This document introduces Olive and provides some examples to get you started.

.. toctree::
   :maxdepth: 1
   :caption: OVERVIEW

   overview/olive
   overview/design
   overview/quicktour
   overview/options

.. toctree::
   :maxdepth: 1
   :caption: GET STARTED

   getstarted/installation
   getstarted/quickstart_examples

.. toctree::
   :maxdepth: 1
   :caption: TUTORIALS

   tutorials/configure_systems
   tutorials/configure_metrics
   tutorials/configure_pass
   tutorials/configure_hardware_optimizations
   tutorials/advanced_users
   tutorials/how_to_add_pass
   tutorials/how_to_write_userscript
   tutorials/packaging_output_models

.. toctree::
   :maxdepth: 1
   :caption: EXAMPLES

   examples

.. toctree::
   :maxdepth: 1
   :caption: API REFERENCE

   api/models.rst
   api/systems.rst
   api/evaluator.rst
   api/metric.rst
   api/search-algorithms.rst
   api/engine.rst
   api/passes.rst
